--- a/DisasterRecovery/Web.config
+++ b/DisasterRecovery/Web.config
@@ -61,5 +61,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings><add name="DisasterRecoveryEntities" connectionString="metadata=res://*/Models.DisasterRecoveryModel.csdl|res://*/Models.DisasterRecoveryModel.ssdl|res://*/Models.DisasterRecoveryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JASAMHP\SQLEXPRESS;initial catalog=DisasterRecovery;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="DisasterRecoveryEntities" connectionString="metadata=res://*/Models.DisasterRecoveryModel.csdl|res://*/Models.DisasterRecoveryModel.ssdl|res://*/Models.DisasterRecoveryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-F40MVBF\SQLEXPRESS;initial catalog=DisasterRecovery;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
