--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 *.userosscache
 *.sln.docstates
 
-web.config
+/DisaterRcovery/web.config
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
