--- a/DisasterRecovery/DisasterRecovery.csproj
+++ b/DisasterRecovery/DisasterRecovery.csproj
@@ -287,11 +287,6 @@
     <Content Include="Scripts\popper.min.js" />
     <Content Include="Scripts\template-functions.js" />
     <Content Include="Web.config" />
-    <Content Include="Views\Login\Create.cshtml" />
-    <Content Include="Views\Login\Delete.cshtml" />
-    <Content Include="Views\Login\Details.cshtml" />
-    <Content Include="Views\Login\Edit.cshtml" />
-    <Content Include="Views\Login\Index2.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Shared\_LoginLayout.cshtml" />
     <Content Include="bin\DisasterRecovery.dll.config" />
@@ -314,6 +309,7 @@
     <Content Include="obj\Debug\edmxResourcesToEmbed\Models\DisasterRecoveryModel.msl" />
     <Content Include="obj\Debug\edmxResourcesToEmbed\Models\DisasterRecoveryModel.ssdl" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Shared\_LayoutContractor.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
