Adding more Valitation

--- a/DisasterRecovery/DisasterRecovery.csproj
+++ b/DisasterRecovery/DisasterRecovery.csproj
@@ -325,6 +325,7 @@
     <Content Include="Views\TimeCards\IndexAdm.cshtml" />
     <Content Include="Views\TimeCards\ReviewSubmission.cshtml" />
     <Content Include="Views\Users\UnAuthorized.cshtml" />
+    <Content Include="Views\Users\RecoverAccount.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
